--- a/templates/restaurantes/home.html
+++ b/templates/restaurantes/home.html
@@ -1,11 +1,11 @@
 {% extends "restaurantes/layout.html" %}
 {% block content %}
-	
 		 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	        <ul class="nav navbar-nav">
-	          <li><a href="{% url 'auth_login' %}">Login</a></li>
-	          <li><a href="{% url 'registration_register' %}">Registro</a></li>
-	        </ul>
+		 	{% if user.is_authenticated %}
+	        	<h1>Bienvenidx {{ user.username }}</h1>
+        	{% else %}
+        		<h1>Inicia sesión</h1>
+        	{% endif %}
 	      </div><!-- /.navbar-collapse -->
-		{% block login %}{% endblock %}
+
 {% endblock %}
